--- a/About us.html
+++ b/About us.html
@@ -711,56 +711,53 @@ nav {
     </footer>
 
     <script>
-        // Hamburger Menu Functionality
-        document.addEventListener('DOMContentLoaded', function () {
-            const hamburger = document.getElementById('hamburger');
-            const closeMenuButton = document.getElementById('close-menu');
-            const navLinks = document.getElementById('nav-links');
+         
+    // Hamburger Menu Functionality
+    const hamburger = document.getElementById('hamburger');
+    const closeMenuButton = document.getElementById('close-menu');
+    const navLinks = document.getElementById('nav-links');
 
-            function toggleMenu(event) {
-                event.preventDefault();
-                event.stopPropagation();
-                hamburger.classList.toggle('open');
-                navLinks.classList.toggle('show');
+    function toggleMenu(event) {
+        event.preventDefault();
+        event.stopPropagation();
+        hamburger.classList.toggle('open');
+        navLinks.classList.toggle('show');
+        navLinks.style.position = 'fixed';
+        navLinks.style.top = '0';
+        navLinks.style.right = '0';
+        navLinks.style.bottom = '0';
+        navLinks.style.left = '0';
+        navLinks.style.zIndex = "3000";
+        hamburger.style.zIndex = "2999"; // Set to a lower value than nav-links-mobile
+    }
 
-                if (navLinks.classList.contains('show')) {
-                    hamburger.classList.add('hide-hamburger');
-                } else {
-                    hamburger.classList.remove('hide-hamburger');
-                }
+    function closeMenu(event) {
+        event.preventDefault();
+        event.stopPropagation();
+        hamburger.classList.remove('open');
+        navLinks.classList.remove('show');
+        // Reset hamburger z-index if needed
+        hamburger.style.zIndex = "2001"; // Ensure it's below nav-links-mobile
+    }
 
-                // Ensure the nav menu covers the entire viewport
-                navLinks.style.position = 'fixed';
-                navLinks.style.top = '0';
-                navLinks.style.right = '0';
-                navLinks.style.bottom = '0';
-                navLinks.style.left = '0';
-                navLinks.style.zIndex = "3000";
-                hamburger.style.zIndex = "3001";
+    if (hamburger) {
+        hamburger.addEventListener('click', toggleMenu);
+        hamburger.addEventListener('touchstart', toggleMenu);
+    }
+
+    if (closeMenuButton) {
+        closeMenuButton.addEventListener('click', closeMenu);
+        closeMenuButton.addEventListener('touchstart', closeMenu);
+    }
+
+    document.addEventListener('click', function (event) {
+        if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
+            if (navLinks.classList.contains('show')) {
+                closeMenu(event);
             }
-
-            function closeMenu(event) {
-                event.preventDefault();
-                event.stopPropagation();
-                hamburger.classList.remove('open');
-                navLinks.classList.remove('show');
-                hamburger.classList.remove('hide-hamburger');
-            }
-
-            hamburger.addEventListener('click', toggleMenu);
-            hamburger.addEventListener('touchstart', toggleMenu);
-            closeMenuButton.addEventListener('click', closeMenu);
-            closeMenuButton.addEventListener('touchstart', closeMenu);
-
-            // Close the menu when clicking outside of it
-            document.addEventListener('click', function (event) {
-                if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
-                    if (navLinks.classList.contains('show')) {
-                        closeMenu(event);
-                    }
-                }
-            });
-        });
+        }
+    });
+        
 
         // Section Animation for Transition Effect
         window.addEventListener('scroll', function () {
